@@ -48,6 +48,7 @@
 			description="COM_JSPACE_REPOSITORY_UNMAPPED_METADATA_KEYS_DESC"
 			value="1" />
 	</fieldset>
+	<!-- 
 	<fieldset name="DSpace"
         label="COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_LABEL"
         description="COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_DESC"
@@ -113,6 +114,7 @@
             type="text" 
             label="COM_JSPACE_REPOSITORY_CROSSWALK_LABEL"  />
 	</fieldset>
+	 -->
 	<fieldset name="permissions"
 		label="JCONFIG_PERMISSIONS_LABEL"
 		description="JCONFIG_PERMISSIONS_DESC">
