@@ -1,0 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
+<form>
+    <fields>
+		<fieldset name="DSpace"
+	        label="COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_LABEL"
+	        description="COM_JSPACE_FIELDSET_CONFIG_DSPACE_OPTIONS_DESC"
+	        addfieldpath="/libraries/jspace/form/fields">
+	        <field 
+	            name="DSpace_base_url" 
+	            type="text" 
+	            label="COM_JSPACE_REPOSITORY_BASE_URL_LABEL" 
+	            size="45"/>
+	        <field 
+	            name="DSpace_rest_url" 
+	            type="text" 
+	            label="COM_JSPACE_REPOSITORY_REST_URL_LABEL" 
+	            size="45"/>
+	        <field 
+	            name="DSpace_username" 
+	            type="text" 
+	            label="COM_JSPACE_REPOSITORY_USERNAME_LABEL" 
+	            description="COM_JSPACE_REPOSITORY_USERNAME_DESC"
+	            size="45"/>
+	        <field 
+	            name="DSpace_password" 
+	            type="text" 
+	            label="COM_JSPACE_REPOSITORY_PASSWORD_LABEL"
+	            description="COM_JSPACE_REPOSITORY_PASSWORD_DESC" 
+	            size="45"/>
+	        <field 
+	            name="DSpace_defaultcollectionid" 
+	            type="JSpace.Collection" 
+	            label="COM_JSPACE_REPOSITORY_DEFAULTCOLLECTION_LABEL"
+	            description="COM_JSPACE_REPOSITORY_DEFAULTCOLLECTION_DESC"/>
+	        <field 
+	            name="DSpace_crosswalk" 
+	            type="text" 
+	            label="COM_JSPACE_REPOSITORY_CROSSWALK_LABEL"  />
+		</fieldset>
+    </fields>
+</form>
