@@ -1,8 +1,1 @@
-; $Id$
-; Wijiti
-; Copyright (C) 2012 Wijiti Pty Ltd. All rights reserved.
-; License http://www.gnu.org/licenses/gpl-3.0.html
-; Note : All ini files need to be saved as UTF-8
-
-PLG_JSPACE_COMMUNITYPOSTS="JSpace - CommunityPosts"
-PLG_JSPACE_COMMUNITYPOSTS_XML_DESCRIPTION="Post messages from JSpace to Jomsocial's Wall."
+COM_JSPACE_FIELDSET_CONFIG_BLANK_LABEL="Blank driver"
